change font color

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button class="btn">Download Resume</button>
             </div>
         </div>
-
+        <div class="hr-line"></div>
         <!-- skill -->
         <h3 id="skill">Technical Skills</h3>
         <p class="ex-skill">"I am mansion below which technology, I am currently working"</p>
@@ -95,7 +95,7 @@
 
     </main>
     <!-- gallery -->
-
+    <div class="hr-line"></div>
     <div class="container" id="gallery">
         <h3>Gallery</h3>
         <p class="ex-skill">"this are the below some pictures are clicked by me"</p>
