change image path

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="about" id="about">
             <div class="img">
-                <img src="img/pro.jpg" alt="" class="profile">
+                <img src="https://images.unsplash.com/photo-1618582459684-e4abfad1dc36?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80" alt="" class="profile">
                 <h4 class="name">DEEPCHAND DEWANGAN</h4>
             </div>
             <div class="para">
@@ -100,19 +100,19 @@
         <h3>Gallery</h3>
         <p class="ex-skill">"this are the below some pictures are clicked by me"</p>
         <div class="gallery img-1 on">
-            <img src="img/img1.jpg" alt="">
+            <img src="https://images.unsplash.com/photo-1618582459232-3911b8405e8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="">
         </div>
         <div class="gallery img-2 ">
-            <img src="img/img2.jpg" alt="">
+            <img src="https://images.unsplash.com/photo-1618582460217-b2ae78f68966?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8M3x8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
         </div>
         <div class="gallery img-3">
-            <img src="img/img3.jpg" alt="">
+            <img src="https://images.unsplash.com/photo-1618582930462-2a9208ce8d55?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
         </div>
         <div class="gallery img-4">
-            <img src="img/img4.jpg" alt="">
+            <img src="https://images.unsplash.com/photo-1618582459234-6960c024efe9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Nnx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="">
         </div>
         <div class="gallery img-5">
-            <img src="img/img2.jpg" alt="">
+            <img src="https://images.unsplash.com/photo-1618582930591-96266f11b901?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MXx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
         </div>
     </div>
 
@@ -136,9 +136,9 @@
         <!-- contact end -->
         <h3 class="f-design" style="color: #fff;">Designed by DEEPCHAND</h3>
         <div class="copy">
-            <h4>
+            <h5>
                 &#169; 2021 @dc_dew, All rights reserved.
-            </h4>
+            </h5>
         </div>
     </div>
     <!-- footer end -->
