--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script type="text/javascript" src="https://kit.fontawesome.com/d0974d0f92.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body onload="preload()">
+
+    <div id="preload"></div>
     <div class="container">
         <div class="slide s1 bgactive"></div>
         <div class="slide s2"></div>
@@ -45,13 +47,13 @@
                 <h3>Hey there</h3>
                 <p class="intro">I am <b>DEEPCHAND DEWANGAN</b>. I am from durg, chhattisgarh, india. I am currently studing in <b>Bhilai Institute of Technology, Durg</b>. i am M.C.A. final semseter student.</p>
                 <p class="intro">Right now, I am intern in <b>HEPTARISE IT SOLUTION</b>, Raipur</p>
-                <button class="btn">Download Resume</button>
+                <a href="https://drive.google.com/file/d/1ceRTXu7fJjSdomJ9ihXm2tcRjvwtOzCN/view?usp=drivesdk" class="btn-a">Download Resume</a>
             </div>
         </div>
         <div class="hr-line"></div>
         <!-- skill -->
         <h3 id="skill">Technical Skills</h3>
-        <p class="ex-skill">"I am mansion below which technology, I am currently working"</p>
+        <p class="ex-skill">"I am mentioning below some technology which I am currently working"</p>
         <div class="pro">
             <div class="pro-border">
                 <div class="progress html" style="background-color: #10f554">
@@ -98,7 +100,7 @@
     <div class="hr-line"></div>
     <div class="container" id="gallery">
         <h3>Gallery</h3>
-        <p class="ex-skill">"this are the below some pictures are clicked by me"</p>
+        <p class="ex-skill">"below are the some pictures that clicked by me"</p>
         <div class="gallery img-1 on">
             <img src="https://images.unsplash.com/photo-1618582459232-3911b8405e8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="">
         </div>
@@ -121,26 +123,26 @@
 
     <!-- Footer -->
     <div class="footer" id="contact">
-
-
+        <div class="email">
+            <h3>If you want to contact me!</h3>
+            <a href="mailto:dcdew15@gmail.com" class="btn-a">GET IN TOUCH</a> <br class="br">
+        </div>
         <!-- contact -->
         <div class="social">
-            <h3 style="color: #fff;">If your want to contact me!</h3>
-            <button class="btn ">GET IN TOUCH</button> <br>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-github"></i>
-            <i class="fab fa-linkedin-in"></i>
+            <a href="https://www.instagram.com/dc_dew/" class="link"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/imdeepchand" class="link"><i class="fab fa-github"></i></a>
+            <a href="https://in.linkedin.com/in/deepchand-dewangan-b94125204" class="link"><i class="fab fa-linkedin-in"></i></a>
         </div>
-
-        <!-- contact end -->
-        <h3 class="f-design" style="color: #fff;">Designed by DEEPCHAND</h3>
-        <div class="copy">
-            <h5>
-                &#169; 2021 @dc_dew, All rights reserved.
-            </h5>
-        </div>
+        <h3 class="f-design">Designed by DEEPCHAND</h3>
     </div>
+    <!-- contact end -->
+
+    <div class="copy">
+        <h5>
+            &#169; 2021 @dc_dew, All rights reserved.
+        </h5>
+    </div>
+
     <!-- footer end -->
 
 
