--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 
 <body>
 
-    <div class="container-pre" id="preload">
+    <div class="pre-container" id="preload">
         <div class="main">
-            <div class="circle c-1"></div>
-            <div class="circle c-2"></div>
-            <div class="circle c-3"></div>
-            <div class="circle c-4"></div>
-            <div class="circle c-5"></div>
-            <div class="circle c-6"></div>
+            <div class="center"></div>
+            <div class="line l-1"></div>
+            <div class="line l-2"></div>
+            <div class="square s-1"></div>
+            <div class="square s-2"></div>
         </div>
     </div>
     <div class="container">
@@ -57,7 +56,7 @@
                 <h3>Hey there</h3>
                 <p class="intro">I am <b>DEEPCHAND DEWANGAN</b>. I am from durg, chhattisgarh, india. I am currently studing in <b>Bhilai Institute of Technology, Durg</b>. i am M.C.A. final semseter student.</p>
                 <p class="intro">Right now, I am intern in <b>HEPTARISE IT SOLUTION</b>, Raipur</p>
-                <a href="https://drive.google.com/file/d/1ceRTXu7fJjSdomJ9ihXm2tcRjvwtOzCN/view?usp=drivesdk" class="btn-a">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1ceRTXu7fJjSdomJ9ihXm2tcRjvwtOzCN/view?pli=1" class="btn-a">Download Resume</a>
             </div>
         </div>
         <div class="hr-line"></div>
